--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "react-comp-generator",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "create react components from your terminal",
+  "keywords": ["react", "components", "component", "generator", "class", "functional", "style", "react-component-generator"],
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
